<resources>
    <string name="app_name">MixChat</string>
    <string name="perfil">Perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="chat">Chat</string>
    <string name="iniciar_sesión">INICIAR SESIÓN</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="he_olvidado_contra">He olvidado la contraseña</string>
    <string name="entrar">ENTRAR</string>
    <string name="opciones_inicio">O puedes iniciar sesión con</string>
    <string name="google"></string>
    <string name="facebook"></string>
    <string name="instagram"></string>
    <string name="twitter"></string>
    <string name="tiktok"></string>
    <string name="cuenta_nueva">CUENTA NUEVA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opciones_registro">O puedes registrarte con</string>
    <string name="usuario">Usuario</string>
    <string name="crear">CREAR</string>
</resources>